--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,19 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.0.0
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.2
+  shared_preferences: ^2.3.0
+  google_sign_in: ^6.2.1
+  jwt_decoder: ^2.0.1
+  image_picker: ^1.1.0
+  shimmer: ^3.0.0
+  uuid: ^4.5.1
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -18,17 +26,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  # To include images, uncomment and modify this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #   - assets/images/logo.png
