--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,10 @@ dependencies:
   shimmer: ^3.0.0
   uuid: ^4.5.1
   web_socket_channel: ^2.4.0
+  flutter_secure_storage: ^9.2.4
+  flutter_dotenv: ^6.0.0
 
+  http_parser: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
