--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-build/**/*.apk filter=lfs diff=lfs merge=lfs -text
+build/app/outputs/apk/debug/*.apk filter=lfs diff=lfs merge=lfs -text
 build/**/*.dill filter=lfs diff=lfs merge=lfs -text
 build/**/*.so filter=lfs diff=lfs merge=lfs -text
+build/**/*.apk filter=lfs diff=lfs merge=lfs -text
